<resources>
    <string name="app_name">ProjectUAS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_vetrinary">Veterinary</string>
    <string name="title_grooming">Grooming</string>
    <string name="foods">Foods</string>
    <string name="grooming">Grooming</string>
    <string name="veterinary">Veterinary</string>
    <string name="groom_name">Grooming Name</string>
    <string name="desc">desc</string>
    <string name="groom_price">Price</string>
    <string name="vet_name">Drh. xx</string>
    <string name="session">Session</string>
    <string name="booking_consult">Booking Consult</string>
    <string name="consult_with">"Consultating With "</string>
    <string name="specialist">Veterinary</string>
    <string name="consult_detail">Detail consult</string>
    <string name="consult_price">Rp. </string>
    <string name="count">1</string>
    <string name="grooming_type">Grooming Type</string>
    <string name="profile">Profile</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>
    <string name="status">Status</string>


    <string-array name="Month_dropdown">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="Year_dropdown">
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
    </string-array>

</resources>