<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_cream"
    tools:context=".feature.Veterinary.VeterinaryBookingConsultActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingStart="16dp">

        <ImageButton
            android:id="@+id/arrowBackButton_vet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"
            android:backgroundTint="@color/bg_cream"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.5"/>

        <TextView
            android:id="@+id/tv_session"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/session"
            android:textSize="20sp"
            android:layout_marginStart="24dp"
            android:textColor="@color/black"
            android:lineSpacingExtra="-6sp"
            android:textStyle="bold"
            android:gravity="center_vertical"
            app:layout_constraintStart_toEndOf="@+id/arrowBackButton_vet"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.5"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_consult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/top_bar"
        card_view:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp">

            <TextView
                android:id="@+id/tv_book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/booking_consult"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/black"/>

            <ImageView
                android:id="@+id/img_photo_landscape"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/icon_land_karun"
                android:layout_below="@+id/tv_book"/>

            <TextView
                android:id="@+id/tv_consult_with"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_photo_landscape"
                android:text="@string/consult_with"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tv_consult_specialist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_consult_with"
                android:text="@string/specialist"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_consult_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_consult_specialist"
                android:text="@string/consult_detail"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/tv_consult_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_consult_detail"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/consult_price"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/orange"/>
            
            <LinearLayout
                android:id="@+id/btn_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_consult_detail"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:background="@drawable/bg_count_consult">

                <ImageButton
                    android:id="@+id/btn_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/min"
                    android:backgroundTint="@color/white"/>

                <TextView
                    android:id="@+id/tv_count_order"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:text="@string/count"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textAlignment="center"/>

                <ImageButton
                    android:id="@+id/btn_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/plus"
                    android:backgroundTint="@color/white"/>

            </LinearLayout>

            <Button
                android:id="@+id/btn_book_consult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_consult_price"
                android:text="Book"
                android:textColor="@color/black"
                android:backgroundTint="@color/light_orange"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>