<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gro_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="20dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp">

        <ImageView
            android:id="@+id/img_photo"
            android:layout_width="72dp"
            android:layout_height="94dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars"/>

        <TextView
            android:id="@+id/tv_vet_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_toEndOf="@id/img_photo"
            android:layout_toRightOf="@id/img_photo"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:text="@string/vet_name"/>

        <TextView
            android:id="@+id/tv_vet_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_vet_name"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@id/img_photo"
            android:layout_toRightOf="@id/img_photo"
            android:ellipsize="end"
            android:textSize="10sp"
            tools:text="@string/desc" />

        <LinearLayout
            android:id="@+id/tv_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/img_photo"
            android:layout_below="@id/tv_vet_detail"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp">
            <TextView
                android:layout_width="50dp"
                android:layout_height="15dp"
                android:text="5 Tahun"
                android:textSize="10sp"
                android:textAlignment="center"
                android:background="@drawable/shape_category"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_vet_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/img_photo"
            android:layout_toRightOf="@id/img_photo"
            android:layout_below="@id/tv_category"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:text="@string/groom_price"/>
    </RelativeLayout>

</androidx.cardview.widget.CardView>