<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/bg_profile"
    tools:context=".profile.ProfileActivity">

    <FrameLayout
        android:id="@+id/frameLayout_Nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_profile">

            <TextView
                android:id="@+id/profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="36dp"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/fotoProfile"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_below="@+id/profile"
                android:layout_centerInParent="true"
                android:layout_marginTop="36dp"
                tools:ignore="MissingClass"
                android:src="@drawable/avatar_profile"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fotoProfile"
                android:layout_margin="20dp"
                card_view:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="20sp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Username"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/tv_profile_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Muhammad"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:layout_marginBottom="16dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Email"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/tv_profile_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Muhammad@Gmail.com"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:layout_marginBottom="16dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Password"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/tv_profile_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="******"
                        android:textSize="16sp"
                        android:textColor="@color/black"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btn_profile_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cv_profile"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/update"
                android:background="@drawable/bg_button_chat"/>

            <Button
                android:id="@+id/btn_profile_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_profile_update"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/logout"
                android:background="@drawable/bg_button_chat"/>

        </RelativeLayout>

    </FrameLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:background="#F8F8F8"
        android:id="@+id/bottom_navView"
        app:menu="@menu/bottom_navbar"
        app:itemIconTint="@drawable/bottom_nav_item_selector"
        app:itemTextColor="@drawable/bottom_nav_item_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>